--- a/vivek/test-output/index.html
+++ b/vivek/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse--262852707\testng-customsuite.xml</span>
+                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse--284700047\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="basics.AppiumBasics" class="method navigator-link" hash-for-method="swipeTONext">swipeTONext</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.TestCases" class="method navigator-link" hash-for-method="openApplication">openApplication</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">basics.AppiumBasics</span>
+              <span class="class-name">practiceAPK.TestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="swipeTONext">
-                  </a> <!-- swipeTONext -->
-                  <span class="method-name">swipeTONext</span>
+                  <a name="openApplication">
+                  </a> <!-- openApplication -->
+                  <span class="method-name">openApplication</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse--262852707\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse--284700047\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;basics.AppiumBasics&quot;&gt;
+      &lt;class name=&quot;practiceAPK.TestCases&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;swipeTONext&quot;/&gt;
+          &lt;include name=&quot;openApplication&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- basics.AppiumBasics --&gt;
+      &lt;/class&gt; &lt;!-- practiceAPK.TestCases --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'swipeTONext')
-data.setCell(0, 2, 'basics.AppiumBasics')
-data.setCell(0, 3, 5541);
+data.setCell(0, 1, 'openApplication')
+data.setCell(0, 2, 'practiceAPK.TestCases')
+data.setCell(0, 3, 4362);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,22 +213,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">basics.AppiumBasics</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">ScrollTillEnd</span>
-                <br/>
-                <span class="ignored-method-name">runAppium</span>
-                <br/>
-                <span class="ignored-method-name">ScrollToElement</span>
-                <br/>
-                <span class="ignored-method-name">longPressOnTab</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -237,18 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">basics.AppiumBasics</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">practiceAPK.TestCases</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">appiumConfig</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">swipeTONext</span>
-                <span class="method-start">5759 ms</span>
+                <span class="method-name">openApplication</span>
+                <span class="method-start">13543 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11303 ms</span>
+                <span class="method-start">17908 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
