more test cases added

--- a/vivek/test-output/index.html
+++ b/vivek/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse--284700047\testng-customsuite.xml</span>
+                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse--1035143899\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.TestCases" class="method navigator-link" hash-for-method="openApplication">openApplication</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.TestCases" class="method navigator-link" hash-for-method="addTOCart">addTOCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="openApplication">
-                  </a> <!-- openApplication -->
-                  <span class="method-name">openApplication</span>
+                  <a name="addTOCart">
+                  </a> <!-- addTOCart -->
+                  <span class="method-name">addTOCart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse--284700047\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse--1035143899\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;practiceAPK.TestCases&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;openApplication&quot;/&gt;
+          &lt;include name=&quot;addTOCart&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- practiceAPK.TestCases --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'openApplication')
+data.setCell(0, 1, 'addTOCart')
 data.setCell(0, 2, 'practiceAPK.TestCases')
-data.setCell(0, 3, 4362);
+data.setCell(0, 3, 36297);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,9 +213,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">practiceAPK.TestCases</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">validateToast</span>
+                <br/>
+                <span class="ignored-method-name">verifyheaders</span>
+                <br/>
+                <span class="ignored-method-name">validateFormFill</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -230,12 +241,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">openApplication</span>
-                <span class="method-start">13543 ms</span>
+                <span class="method-name">addTOCart</span>
+                <span class="method-start">8703 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17908 ms</span>
+                <span class="method-start">45004 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
