--- a/vivek/test-output/emailable-report.html
+++ b/vivek/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45,360</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">87,694</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">practiceAPK.TestCases</td><td><a href="#m0">addTOCart</a></td><td rowspan="1">1717565692865</td><td rowspan="1">36297</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">practiceAPK.ProductPageTest</td><td><a href="#m0">addTOCarts</a></td><td rowspan="3">1717996669310</td><td rowspan="3">18228</td></tr><tr class="passedeven"><td><a href="#m1">addTOCarts</a></td></tr><tr class="passedeven"><td><a href="#m2">addTOCarts</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">practiceAPK.TestCases#addTOCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">practiceAPK.ProductPageTest#addTOCarts</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{name=vivek, country=Angola, product=Jordan 6 Rings, gender=male}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">practiceAPK.ProductPageTest#addTOCarts</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{name=Somya, country=Argentina, product=Nike Blazer Mid &apos;77, gender=female}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">practiceAPK.ProductPageTest#addTOCarts</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{name=Rajat, country=Bhutan, product=Nike Blazer Mid &apos;77, gender=male}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
