--- a/vivek/test-output/index.html
+++ b/vivek/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse--1035143899\testng-customsuite.xml</span>
+                    <span>C:\Users\Inno\AppData\Local\Temp\testng-eclipse-196479285\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.TestCases" class="method navigator-link" hash-for-method="addTOCart">addTOCart</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.ProductPageTest" class="method navigator-link" hash-for-method="addTOCarts({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male})">addTOCarts({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.ProductPageTest" class="method navigator-link" hash-for-method="addTOCarts({name=Somya, country=Argentina, product=Nike Blazer Mid &#039;77, gender=female})">addTOCarts({name=Somya, country=Argentina, product=Nike Blazer Mid '77, gender=female})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="practiceAPK.ProductPageTest" class="method navigator-link" hash-for-method="addTOCarts({name=Rajat, country=Bhutan, product=Nike Blazer Mid &#039;77, gender=male})">addTOCarts({name=Rajat, country=Bhutan, product=Nike Blazer Mid '77, gender=male})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">practiceAPK.TestCases</span>
+              <span class="class-name">practiceAPK.ProductPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addTOCart">
-                  </a> <!-- addTOCart -->
-                  <span class="method-name">addTOCart</span>
+                  <a name="addTOCarts({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male})">
+                  </a> <!-- addTOCarts({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male}) -->
+                  <span class="method-name">addTOCarts</span>
+                  <span class="parameters">({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addTOCarts({name=Somya, country=Argentina, product=Nike Blazer Mid &#039;77, gender=female})">
+                  </a> <!-- addTOCarts({name=Somya, country=Argentina, product=Nike Blazer Mid '77, gender=female}) -->
+                  <span class="method-name">addTOCarts</span>
+                  <span class="parameters">({name=Somya, country=Argentina, product=Nike Blazer Mid '77, gender=female})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addTOCarts({name=Rajat, country=Bhutan, product=Nike Blazer Mid &#039;77, gender=male})">
+                  </a> <!-- addTOCarts({name=Rajat, country=Bhutan, product=Nike Blazer Mid '77, gender=male}) -->
+                  <span class="method-name">addTOCarts</span>
+                  <span class="parameters">({name=Rajat, country=Bhutan, product=Nike Blazer Mid '77, gender=male})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse--1035143899\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Inno\AppData\Local\Temp\testng-eclipse-196479285\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +172,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;practiceAPK.TestCases&quot;&gt;
+      &lt;class name=&quot;practiceAPK.ProductPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;addTOCart&quot;/&gt;
+          &lt;include name=&quot;addTOCarts&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- practiceAPK.TestCases --&gt;
+      &lt;/class&gt; &lt;!-- practiceAPK.ProductPageTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +216,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addTOCart')
-data.setCell(0, 2, 'practiceAPK.TestCases')
-data.setCell(0, 3, 36297);
+data.setCell(0, 1, 'addTOCarts')
+data.setCell(0, 2, 'practiceAPK.ProductPageTest')
+data.setCell(0, 3, 22596);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'addTOCarts')
+data.setCell(1, 2, 'practiceAPK.ProductPageTest')
+data.setCell(1, 3, 18228);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'addTOCarts')
+data.setCell(2, 2, 'practiceAPK.ProductPageTest')
+data.setCell(2, 3, 16112);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 36 seconds</span>
+              <span class="suite-total-time">Total running time: 56 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,17 +248,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">practiceAPK.TestCases</span>
+              <span class="ignored-class-name">practiceAPK.ProductPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">validateToast</span>
+                <span class="ignored-method-name">addTOCart</span>
                 <br/>
-                <span class="ignored-method-name">verifyheaders</span>
-                <br/>
-                <span class="ignored-method-name">validateFormFill</span>
+                <span class="ignored-method-name">sumOfCartValue</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -235,18 +268,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">practiceAPK.TestCases</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">practiceAPK.ProductPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">appiumConfig</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">addTOCart</span>
-                <span class="method-start">8703 ms</span>
+                <span class="method-name">addTOCarts({name=vivek, country=Angola, product=Jordan 6 Rings, gender=male})</span>
+                <span class="method-start">18536 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">appiumConfig</span>
+                <span class="method-start">36766 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">addTOCarts({name=Somya, country=Argentina, product=Nike Blazer Mid '77, gender=female})</span>
+                <span class="method-start">42545 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">appiumConfig</span>
+                <span class="method-start">58662 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">addTOCarts({name=Rajat, country=Bhutan, product=Nike Blazer Mid '77, gender=male})</span>
+                <span class="method-start">64465 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">45004 ms</span>
+                <span class="method-start">87064 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
