--- a/vivek/test-output/emailable-report.html
+++ b/vivek/test-output/emailable-report.html
@@ -8,17 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">cart app test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">90,591</td><td></td><td></td></tr>
+<tr><th colspan="8">Smoke</th></tr>
+<tr><td><a href="#t0">Home_Page test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">64,782</td><td>Smoke</td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">product_page test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">55,639</td><td>Smoke</td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">120,421</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">cart app test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">practiceAPK.homePageTest</td><td><a href="#m0">validateToast</a></td><td rowspan="1">1718130698656</td><td rowspan="1">5310</td></tr><tr><th colspan="4">cart app test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">practiceAPK.homePageTest</td><td><a href="#m1">validateFormFill</a></td><td rowspan="1">1718130659243</td><td rowspan="1">16421</td></tr><tr class="passedeven"><td><a href="#m2">verifyheaders</a></td><td rowspan="1">1718130634630</td><td rowspan="1">4993</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Home_Page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">practiceAPK.homePageTest</td><td><a href="#m0">validateFormFill</a></td><td rowspan="1">1718161529921</td><td rowspan="1">16724</td></tr><tr class="passedeven"><td><a href="#m1">verifyheaders</a></td><td rowspan="1">1718161515694</td><td rowspan="1">5060</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">product_page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">practiceAPK.ProductPageTest</td><td><a href="#m2">addTOCart</a></td><td rowspan="2">1718161584502</td><td rowspan="2">18406</td></tr><tr class="passedeven"><td><a href="#m3">addTOCart</a></td></tr></tbody>
 </table>
-<h2>cart app test</h2><h3 id="m0">practiceAPK.homePageTest#validateToast</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Please enter your nam] but found [Please enter your name]
-	at learnAppiumFramework.vivek.android.homePage.validateToastMessage(homePage.java:86)
-	at practiceAPK.homePageTest.validateToast(homePageTest.java:31)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">practiceAPK.homePageTest#validateFormFill</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">practiceAPK.homePageTest#verifyheaders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Home_Page test</h2><h3 id="m0">practiceAPK.homePageTest#validateFormFill</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">practiceAPK.homePageTest#verifyheaders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>product_page test</h2><h3 id="m2">practiceAPK.ProductPageTest#addTOCart</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>Argentina</td><td>somya</td><td>female</td><td>Nike Blazer Mid &apos;77</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">practiceAPK.ProductPageTest#addTOCart</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>Angola</td><td>vivek</td><td>male,</td><td>Jordan 6 Rings</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
